ATLAS-1130 moved abbreviation validation to validation service