@@ -1,14 +1,11 @@
 package ch.sbb.atlas.servicepointdirectory.abbreviationsallowlist;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
 import lombok.experimental.UtilityClass;
 
 @UtilityClass
 public final class ServicePointAbbreviationAllowList {
-    public static final Set<String> SBOIDS = new HashSet<>(Arrays.asList(
+    public static final Set<String> SBOIDS = Set.of(
 
         "ch:1:sboid:100016",
         "ch:1:sboid:100015",
@@ -31,5 +28,5 @@ public final class ServicePointAbbreviationAllowList {
         "ch:1:sboid:100042",
         "ch:1:sboid:100053"
 
-    ));
+    );
 }
